--- a/thenormapi/appsettings.Development.json
+++ b/thenormapi/appsettings.Development.json
@@ -6,6 +6,6 @@
 		}
 	},
 	"ConnectionStrings": {
-		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";"
+		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm;"
 	}
 }
