minor tweaks to connection string

--- a/thenormapi/appsettings.json
+++ b/thenormapi/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm;"
+	}
 }
