--- a/thenormapi/appsettings.Development.json
+++ b/thenormapi/appsettings.Development.json
@@ -4,5 +4,10 @@
 			"Default": "Information",
 			"Microsoft.AspNetCore": "Warning"
 		}
+	},
+
+	"Auth0": {
+		"Domain": "thenorm.uk.auth0.com",
+		"Audience": "https://thenorm.uk.auth0.com/api/v2/"
 	}
 }
