--- a/thenormapi/appsettings.json
+++ b/thenormapi/appsettings.json
@@ -8,5 +8,9 @@
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
 		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm;"
+	},
+	"Auth0": {
+		"Domain": "thenorm.uk.auth0.com",
+		"Audience": "https://thenorm.uk.auth0.com/api/v2/"
 	}
 }
