--- a/thenormapi/appsettings.Development.json
+++ b/thenormapi/appsettings.Development.json
@@ -1,13 +1,15 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
-
-	"Auth0": {
-		"Domain": "thenorm.uk.auth0.com",
-		"Audience": "https://thenorm.uk.auth0.com/api/v2/"
-	}
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm; User ID=thenormdevteam; Password=augPaul08@; MultipleActiveResultSets=False; Encrypt=True; TrustServerCertificate=False; Connection Timeout=30;"
+  },
+  "Auth0": {
+    "Domain": "thenorm.uk.auth0.com",
+    "Audience": "https://thenorm.uk.auth0.com/api/v2/"
+  }
 }
