--- a/thenormapi/appsettings.json
+++ b/thenormapi/appsettings.json
@@ -7,7 +7,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=theNorm;"
+		"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:thenormdb.database.windows.net,1433;Initial Catalog=thenormsqldb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
 	},
 	"Auth0": {
 		"Domain": "thenorm.uk.auth0.com",
